Ass3/target/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'*'", "'<>'", "'<'", 
                     "'='", "<INVALID>", "'-'", "'/'", "<INVALID>", "'>'", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "'..'", "','", 
                     "':'", "':='", "'('", "')'", "';'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "WHILE", "BEGIN", "END", 
                      "FUNCTION", "RETURN", "PROCEDURE", "VAR", "TRUE", 
                      "FALSE", "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", 
                      "STRING", "NOT", "AND", "OR", "DIV", "MOD", "ADD", 
                      "MUL", "NOT_EQUAD", "LESS_THAN", "EQUAL", "LESS_THAN_EQUAL", 
                      "SUB", "DIVISION", "MODULUS", "GREATER_THAN", "GREATER_THAN_EQUAL", 
                      "WITH", "LSB", "RSB", "D_DOT", "COMMA", "COLON", "ASSIGN", 
                      "LB", "RB", "SEMI", "COMMENT_1", "COMMENT_2", "COMMENT_3", 
                      "COMMENT_4", "IDENTIFIER", "INTEGER_TYPE", "REAL_TYPE", 
                      "STRINGLIT", "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_decl_total = 2
    RULE_var_decl = 3
    RULE_type_data = 4
    RULE_type_array = 5
    RULE_range_arr = 6
    RULE_func_decl_total = 7
    RULE_list_parameter = 8
    RULE_parameter = 9
    RULE_proc_decl_total = 10
    RULE_statement = 11
    RULE_assignment_statement = 12
    RULE_lhs_assign = 13
    RULE_if_statement = 14
    RULE_while_statement = 15
    RULE_for_statement = 16
    RULE_break_statement = 17
    RULE_continue_statement = 18
    RULE_return_statement = 19
    RULE_compound_statement = 20
    RULE_with_statement = 21
    RULE_func_call_statement = 22
    RULE_list_exp = 23
    RULE_exp = 24
    RULE_exp1 = 25
    RULE_exp2 = 26
    RULE_exp3 = 27
    RULE_exp4 = 28
    RULE_exp5 = 29
    RULE_index_express = 30
    RULE_func_call = 31
    RULE_literal = 32
    RULE_boolean_type = 33

    ruleNames =  [ "program", "decl", "var_decl_total", "var_decl", "type_data", 
                   "type_array", "range_arr", "func_decl_total", "list_parameter", 
                   "parameter", "proc_decl_total", "statement", "assignment_statement", 
                   "lhs_assign", "if_statement", "while_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "compound_statement", "with_statement", "func_call_statement", 
                   "list_exp", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "index_express", "func_call", "literal", "boolean_type" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    WHILE=10
    BEGIN=11
    END=12
    FUNCTION=13
    RETURN=14
    PROCEDURE=15
    VAR=16
    TRUE=17
    FALSE=18
    ARRAY=19
    OF=20
    REAL=21
    BOOLEAN=22
    INTEGER=23
    STRING=24
    NOT=25
    AND=26
    OR=27
    DIV=28
    MOD=29
    ADD=30
    MUL=31
    NOT_EQUAD=32
    LESS_THAN=33
    EQUAL=34
    LESS_THAN_EQUAL=35
    SUB=36
    DIVISION=37
    MODULUS=38
    GREATER_THAN=39
    GREATER_THAN_EQUAL=40
    WITH=41
    LSB=42
    RSB=43
    D_DOT=44
    COMMA=45
    COLON=46
    ASSIGN=47
    LB=48
    RB=49
    SEMI=50
    COMMENT_1=51
    COMMENT_2=52
    COMMENT_3=53
    COMMENT_4=54
    IDENTIFIER=55
    INTEGER_TYPE=56
    REAL_TYPE=57
    STRINGLIT=58
    WS=59
    ERROR_CHAR=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0):
                self.state = 68
                self.decl()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_total(self):
            return self.getTypedRuleContext(MPParser.Var_decl_totalContext,0)


        def func_decl_total(self):
            return self.getTypedRuleContext(MPParser.Func_decl_totalContext,0)


        def proc_decl_total(self):
            return self.getTypedRuleContext(MPParser.Proc_decl_totalContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.var_decl_total()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.func_decl_total()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.proc_decl_total()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_decl_totalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_var_decl_total

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_total" ):
                return visitor.visitVar_decl_total(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_total(self):

        localctx = MPParser.Var_decl_totalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl_total)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(MPParser.VAR)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.var_decl()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENTIFIER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MPParser.Type_arrayContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MPParser.IDENTIFIER)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 88
                self.match(MPParser.COMMA)
                self.state = 89
                self.match(MPParser.IDENTIFIER)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(MPParser.COLON)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 96
                self.type_data()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 97
                self.type_array()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 100
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_dataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_type_data

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_data" ):
                return visitor.visitType_data(self)
            else:
                return visitor.visitChildren(self)




    def type_data(self):

        localctx = MPParser.Type_dataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def range_arr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Range_arrContext)
            else:
                return self.getTypedRuleContext(MPParser.Range_arrContext,i)


        def D_DOT(self):
            return self.getToken(MPParser.D_DOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_type_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_array" ):
                return visitor.visitType_array(self)
            else:
                return visitor.visitChildren(self)




    def type_array(self):

        localctx = MPParser.Type_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MPParser.ARRAY)
            self.state = 105
            self.match(MPParser.LSB)
            self.state = 106
            self.range_arr()
            self.state = 107
            self.match(MPParser.D_DOT)
            self.state = 108
            self.range_arr()
            self.state = 109
            self.match(MPParser.RSB)
            self.state = 110
            self.match(MPParser.OF)
            self.state = 111
            self.type_data()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Range_arrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_TYPE(self):
            return self.getToken(MPParser.INTEGER_TYPE, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_range_arr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRange_arr" ):
                return visitor.visitRange_arr(self)
            else:
                return visitor.visitChildren(self)




    def range_arr(self):

        localctx = MPParser.Range_arrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_range_arr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 113
                self.match(MPParser.SUB)


            self.state = 116
            self.match(MPParser.INTEGER_TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_decl_totalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MPParser.Type_arrayContext,0)


        def list_parameter(self):
            return self.getTypedRuleContext(MPParser.List_parameterContext,0)


        def var_decl_total(self):
            return self.getTypedRuleContext(MPParser.Var_decl_totalContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl_total

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl_total" ):
                return visitor.visitFunc_decl_total(self)
            else:
                return visitor.visitChildren(self)




    def func_decl_total(self):

        localctx = MPParser.Func_decl_totalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_decl_total)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MPParser.FUNCTION)
            self.state = 119
            self.match(MPParser.IDENTIFIER)
            self.state = 120
            self.match(MPParser.LB)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 121
                self.list_parameter()


            self.state = 124
            self.match(MPParser.RB)
            self.state = 125
            self.match(MPParser.COLON)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 126
                self.type_data()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 127
                self.type_array()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 130
            self.match(MPParser.SEMI)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 131
                self.var_decl_total()


            self.state = 134
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MPParser.ParameterContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_list_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_parameter" ):
                return visitor.visitList_parameter(self)
            else:
                return visitor.visitChildren(self)




    def list_parameter(self):

        localctx = MPParser.List_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.parameter()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.SEMI:
                self.state = 137
                self.match(MPParser.SEMI)
                self.state = 138
                self.parameter()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_data(self):
            return self.getTypedRuleContext(MPParser.Type_dataContext,0)


        def type_array(self):
            return self.getTypedRuleContext(MPParser.Type_arrayContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MPParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(MPParser.IDENTIFIER)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 145
                self.match(MPParser.COMMA)
                self.state = 146
                self.match(MPParser.IDENTIFIER)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self.match(MPParser.COLON)
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.state = 153
                self.type_data()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 154
                self.type_array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Proc_decl_totalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def list_parameter(self):
            return self.getTypedRuleContext(MPParser.List_parameterContext,0)


        def var_decl_total(self):
            return self.getTypedRuleContext(MPParser.Var_decl_totalContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proc_decl_total

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProc_decl_total" ):
                return visitor.visitProc_decl_total(self)
            else:
                return visitor.visitChildren(self)




    def proc_decl_total(self):
